Validate commands before changing task data
Normalize command whitespace and provide usage guidance for missing or extra arguments. Reject repeated date parameters, unsafe record separators, impossible dates, and non-increasing ISO event ranges so malformed input cannot become saved tasks.

Validate task numbers against the current list instead of a fixed limit of 100. Preserve free-form dates and duplicate tasks, document the rules, and cover recovery with parser tests and 15 console scenarios.